chore(project): switch java source code level to jdk 8
* by bumping release parent version
* adjust tests as assertj cannot deteminate against what generic value to assert with Java 8+
* remove MaxPermSize param

Related to CAM-11105