@@ -107,7 +107,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-              <argLine>-XX:PermSize=128m -XX:MaxPermSize=256m -Duser.timezone=GMT+02:00</argLine>
+              <argLine>-XX:PermSize=128m -Duser.timezone=GMT+02:00</argLine>
               <excludes>
                 <exclude>**/javascript/**</exclude>
               </excludes>
